Atualizações segunda live

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/estilos.css">
 </head>
 
 <body>
@@ -22,7 +24,7 @@
                 <h2 class="nome">Seu Clope</h2>
                 <img class="imagem-personagem" src="src/imagens/seuclope.png" alt="Seu Clope">
                 <div class="descricao">
-                    <h3 class="Titulo">Descrição</h3>
+                    <h3 class="titulo">Descrição</h3>
                     <p class="texto">
                         Seu Clope é conhecido por sua firme convicção de que as novas linguagens de programação são
                         apenas modismos passageiros e desnecessários, e ele se recusa a adotar qualquer uma delas,
@@ -32,15 +34,10 @@
                     </p>
                 </div>
             </li>
+            
             <li class="cartao fundo-2">
-                <div class="informacoes">
-                    <h2 class="nome">Vamplena</h2>
-                </div>
-
-                <div class="container-imagem">
+                    <h2 class="nome">Vamplena</h2>               
                     <img class="imagem-personagem" src="src/imagens/vamplena.png" alt="Vamplena" />
-                </div>
-
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
                     <p class="texto">Apesar de seu objetivo nobre de se tornar sênior, ela luta com o dilema ético de
@@ -49,16 +46,9 @@
                         equilíbrio entre aprender com os outros e cultivar seu próprio talento genuíno.</p>
                 </div>
             </li>
-
             <li class="cartao fundo-3">
-                <div class="informacoes">
                     <h2 class="nome">Jubiléia</h2>
-                </div>
-
-                <div class="container-imagem">
                     <img class="imagem-personagem" src="src/imagens/jubileia.png" alt="Jubiléia" />
-                </div>
-
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
                     <p class="texto">Uma jovem desenvolvedora em treinamento, Jubiléia já se destaca por sua
@@ -68,14 +58,8 @@
                 </div>
             </li>
             <li class="cartao fundo-4">
-                <div class="informacoes">
                     <h2 class="nome">Tempestade Solar</h2>
-                </div>
-
-                <div class="container-imagem">
                     <img class="imagem-personagem" src="src/imagens/tempestade-solar.png" alt="Tempestade Solar" />
-                </div>
-
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
                     <p class="texto">No universo dos desenvolvedores, Tempestade Solar é conhecida como uma das vilãs
@@ -86,14 +70,8 @@
                 </div>
             </li>
             <li class="cartao fundo-5">
-                <div class="informacoes">
                     <h2 class="nome">Loggineto</h2>
-                </div>
-
-                <div class="container-imagem">
                     <img class="imagem-personagem" src="src/imagens/loggineto.png" alt="Loggineto" />
-                </div>
-
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
                     <p class="texto">Ele possui a capacidade única de influenciar e redirecionar fluxos de dados apenas
@@ -104,14 +82,8 @@
                 </div>
             </li>
             <li class="cartao fundo-6">
-                <div class="informacoes">
                     <h2 class="nome">Professor Cafeze</h2>
-                </div>
-
-                <div class="container-imagem">
                     <img class="imagem-personagem" src="./src/imagens/professor-cafeze.png" alt="Professor Cafeze" />
-                </div>
-
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
                     <p class="texto">Líder dos X-devs é um mentor para desenvolvedores iniciantes, guiando-os com sua
@@ -120,7 +92,7 @@
                         sua aprendizagem.</p>
                 </div>
             </li>
-
+         
         </ul>
         <button class="btn-seta" id="btn-avancar">
             <img src="src/imagens/seta.png" alt="Seta para avançar a imagem">
