--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/estilos.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
 </head>
 
 <body>
@@ -98,6 +99,6 @@
             <img src="src/imagens/seta.png" alt="Seta para avançar a imagem">
         </button>
     </main>
+    <script src="./src/js/index.js"></script>
 </body>
-
 </html>
